<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/movie_in_list_bg"
    android:paddingBottom="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/iv_movie_card_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/title"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/movie_in_list" />

    <ImageView
        android:id="@+id/iv_movie_card_mask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/mask_in_list"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toBottomOf="@+id/iv_movie_card_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/title_in_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:text="@string/title_in_list"
        android:textAppearance="@style/title"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_movie_card_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="137 min"
        android:textAppearance="@style/min"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_in_list" />

    <TextView
        android:id="@+id/tag_in_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/tag_in_list"
        android:textAppearance="@style/tag"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_movie_card_image"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/star_list_1"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:padding="2dp"
        android:src="@drawable/star_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_card_reviews"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_card_reviews"
        app:tint="@color/pink" />

    <ImageView
        android:id="@+id/star_list_2"
        android:layout_width="8dp"
        android:layout_height="0dp"

        android:padding="2dp"
        android:src="@drawable/star_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_card_reviews"

        app:layout_constraintStart_toEndOf="@+id/star_list_1"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_card_reviews"
        app:tint="@color/pink" />

    <ImageView
        android:id="@+id/star_list_3"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:padding="2dp"

        android:src="@drawable/star_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_card_reviews"

        app:layout_constraintStart_toEndOf="@+id/star_list_2"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_card_reviews"
        app:tint="@color/pink" />

    <ImageView
        android:id="@+id/star_list_4"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:padding="2dp"

        android:src="@drawable/star_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_card_reviews"

        app:layout_constraintStart_toEndOf="@+id/star_list_3"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_card_reviews"
        app:tint="@color/pink" />

    <ImageView
        android:id="@+id/star_list_5"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:padding="2dp"

        android:src="@drawable/star_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_card_reviews"

        app:layout_constraintStart_toEndOf="@+id/star_list_4"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_card_reviews"
        app:tint="@color/dark_grey" />

    <TextView
        android:id="@+id/tv_movie_card_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"

        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/reviews"
        android:textAppearance="@style/reviews"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_movie_card_image"
        app:layout_constraintStart_toEndOf="@+id/star_list_5" />


    <ImageView
        android:id="@+id/pg_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pg"
        android:textAppearance="@style/pg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/pg_rectangle"
        app:layout_constraintEnd_toEndOf="@id/pg_rectangle"
        app:layout_constraintStart_toStartOf="@id/pg_rectangle"
        app:layout_constraintTop_toTopOf="@id/pg_rectangle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:layout_marginEnd="8dp"
        android:alpha="0.75"

        android:background="@drawable/heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



